# retenmod

./: .gitignore  .pre-commit-config.yaml  ExampleAnalysis.ipynb  ExampleAnalysis.nbconvert.ipynb  LICENSE  README.ipynb  README.md  setup.cfg  simple_test.py
.github/workflows/: check-python.yml  github-actions-demo.yml
.ipynb_checkpoints/: ExampleAnalysis-checkpoint.ipynb
src/retenmod/: __init__.py  agency.csv  data_funcs.py  model_funcs.py  notes.json  spark_funcs.py
tests/: conftest.py  test_data.py  test_mods.py  test_spark.py
