[metadata]
name = retenmod
version = 0.0.1
author = Andrew Palmer Wheeler
author_email = apwheele@gmail.com
description = retention models to forecast churn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apwheele/retenmod
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    scipy
    numpy

[options.package_data]
* = data/*.csv, data/*.json

[options.packages.find]
where = src